--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.txt filter=lfs diff=lfs merge=lfs -text
+allCountries.txt filter=lfs diff=lfs merge=lfs -text
